# xlaudit

./: README.md  pyproject.toml
src/xlaudit/: __init__.py  analysis.py  cli.py  models.py  parser.py  reports.py  scanner.py
src/xlaudit/web/: __init__.py  app.py
src/xlaudit/web/static/: app.js  style.css
src/xlaudit/web/templates/: index.html
tests/: generate_samples.py  test_analysis.py  test_parser.py
tests/samples/: budget_2024.xlsx  kpi_dashboard.xlsx  sales_summary.xlsx
